--- a/Launcher/App/src/main/res/drawable/more_selector.xml
+++ b/Launcher/App/src/main/res/drawable/more_selector.xml
@@ -3,4 +3,5 @@
     <item android:state_pressed="true" android:drawable="@drawable/more_shadow"/> <!-- pressed -->
     <item android:state_focused="true" android:drawable="@drawable/more_shadow"/> <!-- focused -->
     <item android:state_hovered="true" android:drawable="@drawable/more_shadow"/> <!-- hovered -->
+    <item android:state_hovered="false" android:drawable="@drawable/more_shadow"/> <!-- hovered -->
 </selector>
