--- a/Launcher/App/src/main/res/layout/dialog_app_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_app_details.xml
@@ -8,37 +8,42 @@
     android:background="@drawable/bkg_dialog"
     android:padding="20dp">
 
-    <Button
-        android:id="@+id/uninstall"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="end"
-        android:layout_marginTop="-2dp"
-        android:layout_marginEnd="37dp"
-        android:background="@drawable/ic_uninstall"
-        android:backgroundTint="#FFFFFF"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/info"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="end"
-        android:layout_marginTop="-2dp"
-        android:background="@drawable/ic_info"
-        android:backgroundTint="#FFFFFF"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <View
         android:id="@+id/sizer"
-        android:layout_width="350dp"
+        android:layout_width="360dp"
         android:layout_height="94dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-1dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/sizer">
+
+        <Button
+            android:id="@+id/info"
+            style="@android:style/DeviceDefault.ButtonBar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="3dp"
+            android:background="@drawable/ic_info"
+            android:backgroundTint="#FFFFFF"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/uninstall"
+            style="@android:style/DeviceDefault.ButtonBar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="3dp"
+            android:background="@drawable/ic_uninstall"
+            android:backgroundTint="#FFFFFF"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -51,8 +56,8 @@
 
         <ImageView
             android:id="@+id/app_icon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="83dp"
+            android:layout_height="83dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="3dp"
             android:background="@drawable/bkg_app"
@@ -84,6 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="-2sp"
+                android:layout_marginBottom="-1sp"
                 android:singleLine="true"
                 android:textColor="#79FFFFFF"
                 tools:text="com.package.name" />
@@ -95,7 +101,7 @@
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="end"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -138,7 +144,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:thumb="@drawable/switch_thumb_custom"
-                android:track="@drawable/switch_track_custom" />
+                android:track="@drawable/switch_track_custom"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
 
         <FrameLayout
