--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="wrap_content"
@@ -11,72 +10,141 @@
 
     <View
         android:id="@+id/sizer"
-        android:layout_width="260dp"
+        android:layout_width="440dp"
         android:layout_height="0dp" />
 
-    <EditText
-        android:id="@+id/group_name"
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:layout_margin="2dp"
-        android:layout_weight="1"
-        android:autofillHints="text"
-        android:background="@drawable/bkg_name_group"
-        android:inputType="text"
-        android:selectAllOnFocus="true"
-        android:textColor="@android:color/white"
-        android:textSize="28sp" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_weight="1"
-        android:background="@drawable/bkg_button"
-        android:gravity="right"
-        android:orientation="horizontal"
-        android:padding="6dp">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            style="@style/SettingButtonLabel"
+        <EditText
+            android:id="@+id/group_name"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:autofillHints="text"
+            android:background="@drawable/bkg_name_group"
+            android:inputType="text"
+            android:selectAllOnFocus="true"
+            android:textColor="@android:color/white"
+            android:textSize="28sp" />
+
+        <ImageView
+            android:id="@+id/group_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text="@string/default_vr" />
-
-        <Switch
-            android:id="@+id/switch_default_vr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:thumb="@drawable/switch_thumb_custom"
-            android:track="@drawable/switch_track_custom"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_uninstall" />
     </LinearLayout>
 
+    <TextView
+        style="@style/SettingSubtitle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:text="@string/default_group" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_weight="1"
-        android:background="@drawable/bkg_button"
-        android:gravity="right"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="6dp">
+        android:baselineAligned="false">
 
-        <TextView
-            style="@style/SettingButtonLabel"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text="@string/default_2d" />
+            android:layout_marginEnd="2.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/bkg_button"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:padding="6dp"
+            tools:ignore="RtlHardcoded">
 
-        <Switch
-            android:id="@+id/switch_default_2d"
-            android:layout_width="wrap_content"
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="-7dp"
+                android:layout_weight="1"
+                android:paddingStart="5dp"
+                android:singleLine="true"
+                android:text="@string/apps_vr"
+                tools:ignore="NestedWeights,RtlSymmetry" />
+
+            <Switch
+                android:id="@+id/switch_default_web"
+                android:layout_width="wrap_content"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom"
+                tools:ignore="UseSwitchCompatOrMaterialXml"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="2.5dp"
+            android:layout_marginEnd="2.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/bkg_button"
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:padding="6dp">
+
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="-7dp"
+                android:layout_weight="1"
+                android:paddingStart="5dp"
+                android:singleLine="true"
+                android:text="@string/apps_2d"
+                tools:ignore="NestedWeights,RtlSymmetry" />
+
+            <Switch
+                android:id="@+id/switch_default_2d"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:thumb="@drawable/switch_thumb_custom"
-            android:track="@drawable/switch_track_custom"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
+            android:layout_marginStart="2.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/bkg_button"
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:padding="6dp">
+
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="-5dp"
+                android:layout_weight="1"
+                android:paddingStart="3dp"
+                android:singleLine="true"
+                android:text="@string/apps_web"
+                tools:ignore="NestedWeights,RtlSymmetry" />
+
+            <Switch
+                android:id="@+id/switch_default_vr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -84,27 +152,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:gravity="right"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:id="@+id/group_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/bkg_button">
-
-            <TextView
-                style="@style/SettingButtonLabel"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/delete_group" />
-        </FrameLayout>
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <FrameLayout
             android:id="@+id/confirm"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
             android:background="@drawable/bkg_button">
 
             <TextView
