--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -18,7 +18,7 @@
 
         <View
             android:id="@+id/view"
-            android:layout_width="360dp"
+            android:layout_width="455dp"
             android:layout_height="wrap_content" />
 
         <TextView
@@ -67,22 +67,23 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/bkg_button">
+                android:background="@drawable/bkg_button"
+                android:orientation="horizontal">
 
                 <TextView
                     style="@style/SettingButtonLabel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginEnd="35dp"
                     android:singleLine="true"
                     android:text="@string/settings_service"
                     tools:ignore="NestedWeights,RtlSymmetry" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="-10dp"
+                    android:layout_width="35dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-35dp"
                     android:layout_marginEnd="-8dp"
                     android:src="@drawable/ic_shortcut" />
 
@@ -91,16 +92,12 @@
         </LinearLayout>
 
         <TextView
+            style="@style/SettingSubtitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:paddingStart="5dp"
-            android:paddingTop="25dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="5dp"
-            android:text="@string/background_header"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:paddingTop="5dp"
+            android:text="@string/background_header" />
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -196,7 +193,6 @@
                     android:layout_width="32dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="4dp"
-                    android:layout_weight="1"
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
@@ -237,7 +233,7 @@
 
             <Switch
                 android:id="@+id/switch_dark_mode"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:showText="false"
                 android:splitTrack="false"
@@ -248,72 +244,79 @@
         </LinearLayout>
 
         <TextView
+            style="@style/SettingSubtitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:paddingStart="5dp"
-            android:paddingTop="13dp"
-            android:paddingEnd="5dp"
-            android:text="@string/icon_header"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/bkg_button"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/SettingButtonLabel"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:text="@string/icons_size" />
-
-            <SeekBar
-                android:id="@+id/bar_scale"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:max="255"
-                android:padding="0dp"
-                android:progressBackgroundTint="@android:color/white"
-                android:progressDrawable="@drawable/seekbar_custom"
-                android:thumb="@null" />
-        </LinearLayout>
+            android:text="@string/icon_header" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bkg_button"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
-            <TextView
-                style="@style/SettingButtonLabel"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/bkg_button"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/SettingButtonLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:singleLine="true"
+                    android:text="@string/icons_size"
+                    tools:ignore="NestedWeights" />
+
+                <SeekBar
+                    android:id="@+id/bar_scale"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:max="255"
+                    android:padding="0dp"
+                    android:progressBackgroundTint="@android:color/white"
+                    android:progressDrawable="@drawable/seekbar_custom"
+                    android:thumb="@null" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:text="@string/icons_margin" />
+                android:background="@drawable/bkg_button"
+                android:orientation="horizontal"
+                tools:layout_marginStart="5dp">
 
-            <SeekBar
-                android:id="@+id/bar_margin"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:max="255"
-                android:padding="0dp"
-                android:progressBackgroundTint="@android:color/white"
-                android:progressDrawable="@drawable/seekbar_custom"
-                android:thumb="@null" />
+                <TextView
+                    style="@style/SettingButtonLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:singleLine="true"
+                    android:text="@string/icons_margin"
+                    tools:ignore="NestedWeights" />
+
+                <SeekBar
+                    android:id="@+id/bar_margin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:max="255"
+                    android:padding="0dp"
+                    android:progressBackgroundTint="@android:color/white"
+                    android:progressDrawable="@drawable/seekbar_custom"
+                    android:thumb="@null" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -335,7 +338,7 @@
 
             <Switch
                 android:id="@+id/switch_group_mode"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:thumb="@drawable/switch_thumb_custom"
                 android:track="@drawable/switch_track_custom"
@@ -345,20 +348,15 @@
 
         <TextView
             android:id="@+id/textView"
+            style="@style/SettingSubtitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:paddingStart="5dp"
-            android:paddingTop="13dp"
-            android:paddingEnd="5dp"
-            android:text="@string/wide_header"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:text="@string/wide_header" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:orientation="horizontal">
@@ -377,6 +375,7 @@
                     style="@style/SettingButtonLabel"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="-5dp"
                     android:layout_weight="1"
                     android:singleLine="true"
                     android:text="@string/apps_vr" />
@@ -394,7 +393,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/bkg_button"
                 android:orientation="horizontal">
@@ -403,6 +401,7 @@
                     style="@style/SettingButtonLabel"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="-5dp"
                     android:layout_weight="1"
                     android:singleLine="true"
                     android:text="@string/apps_2d" />
@@ -416,24 +415,47 @@
                     tools:ignore="UseSwitchCompatOrMaterialXml" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/bkg_button"
+                android:orientation="horizontal"
+                android:paddingStart="11dp"
+                tools:ignore="RtlSymmetry">
+
+                <TextView
+                    style="@style/SettingButtonLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="-5dp"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:text="@string/apps_web" />
+
+                <Switch
+                    android:id="@+id/switch_wide_web"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:thumb="@drawable/switch_thumb_custom"
+                    android:track="@drawable/switch_track_custom"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <TextView
             android:id="@+id/textView3"
+            style="@style/SettingSubtitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:paddingStart="5dp"
-            android:paddingTop="13dp"
-            android:paddingEnd="5dp"
-            android:text="@string/name_header"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:text="@string/name_header" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
