--- a/Launcher/App/src/main/res/values/styles.xml
+++ b/Launcher/App/src/main/res/values/styles.xml
@@ -17,7 +17,11 @@
     <style name="SettingSubtitle">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingStart">7dp</item>
+        <item name="android:paddingEnd">7dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+<!--        <item name="android:gravity">center_horizontal</item>-->
     </style>
 
     <style name="SettingButtonLabel">
