--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -317,6 +317,7 @@
                     android:progressDrawable="@drawable/seekbar_custom"
                     android:thumb="@null" />
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -324,26 +325,53 @@
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bkg_button"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="2.5dp"
+                android:layout_weight="2"
+                android:background="@drawable/bkg_button"
+                android:orientation="horizontal"
+                tools:ignore="NestedWeights">
+
+                <TextView
+                    style="@style/SettingButtonLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:text="@string/group_mode"
+                    tools:ignore="NestedWeights" />
+
+                <Switch
+                    android:id="@+id/switch_group_mode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:thumb="@drawable/switch_thumb_custom"
+                    android:track="@drawable/switch_track_custom"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+            </LinearLayout>
+
             <TextView
+                android:id="@+id/clear_icon_cache"
                 style="@style/SettingButtonLabel"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="2.5dp"
                 android:layout_weight="1"
+                android:background="@drawable/bkg_button"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingStart="5dp"
                 android:singleLine="true"
-                android:text="@string/group_mode"
-                tools:ignore="NestedWeights" />
+                android:text="@string/clear_cache"
+                tools:ignore="NestedWeights">
 
-            <Switch
-                android:id="@+id/switch_group_mode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:thumb="@drawable/switch_thumb_custom"
-                android:track="@drawable/switch_track_custom"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-
+            </TextView>
         </LinearLayout>
 
         <TextView
