--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -331,7 +331,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="2.5dp"
+                android:layout_marginEnd="3.4dp"
                 android:layout_weight="2"
                 android:background="@drawable/bkg_button"
                 android:orientation="horizontal"
@@ -357,21 +357,67 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/clear_icon_cache"
+                android:id="@+id/clear_icons"
                 style="@style/SettingButtonLabel"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="2.5dp"
+                android:layout_marginStart="6.6dp"
                 android:layout_weight="1"
                 android:background="@drawable/bkg_button"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:singleLine="true"
                 android:text="@string/clear_cache"
                 tools:ignore="NestedWeights">
 
             </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/clear_sort"
+                style="@style/SettingButtonLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="3.3dp"
+                android:layout_weight="2"
+                android:background="@drawable/bkg_button"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:singleLine="true"
+                android:text="@string/clear_sort"
+                tools:ignore="NestedWeights">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/clear_labels"
+                style="@style/SettingButtonLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="6.6dp"
+                android:layout_weight="1"
+                android:background="@drawable/bkg_button"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:singleLine="true"
+                android:text="@string/clear_labels"
+                tools:ignore="NestedWeights">
+
+            </TextView>
+
         </LinearLayout>
 
         <TextView
@@ -392,7 +438,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="6.6dp"
                 android:layout_weight="1"
                 android:background="@drawable/bkg_button"
                 android:orientation="horizontal"
@@ -421,6 +467,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="3.4dp"
+                android:layout_marginEnd="3.4dp"
                 android:layout_weight="1"
                 android:background="@drawable/bkg_button"
                 android:orientation="horizontal">
@@ -446,7 +494,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="6.6dp"
                 android:layout_weight="1"
                 android:background="@drawable/bkg_button"
                 android:orientation="horizontal"
