--- a/Launcher/App/src/main/res/layout/activity_main.xml
+++ b/Launcher/App/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 android:verticalSpacing="15dp" />
 
             <com.threethan.launcher.ui.DynamicHeightGridView
-                android:id="@+id/appsView"
+                android:id="@+id/appsViewIcon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -112,7 +112,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:background="#000000"
         android:orientation="horizontal"
+        android:paddingTop="10dp"
         android:paddingBottom="10dp">
 
         <TextView
@@ -123,7 +125,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:background="@drawable/bkg_dialog"
+            android:background="@drawable/bkg_button_footer"
             android:gravity="center"
             android:paddingStart="15dp"
             android:paddingTop="10dp"
@@ -141,7 +143,7 @@
             android:layout_gravity="bottom|center_horizontal|end"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/bkg_dialog"
+            android:background="@drawable/bkg_button_footer"
             android:gravity="center"
             android:paddingStart="15dp"
             android:paddingTop="10dp"
@@ -156,9 +158,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal|end"
-            android:layout_marginStart="5dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/bkg_dialog"
+            android:background="@drawable/bkg_button_footer"
             android:gravity="center"
             android:paddingStart="15dp"
             android:paddingTop="10dp"
@@ -168,6 +169,7 @@
             android:textColor="@color/ef_colorTextPrimary"
             android:textSize="16sp" />
     </LinearLayout>
+
     <FrameLayout
         android:id="@+id/openAnim"
         android:layout_width="match_parent"
