--- a/Launcher/App/src/main/res/layout/lv_app_wide.xml
+++ b/Launcher/App/src/main/res/layout/lv_app_wide.xml
@@ -18,7 +18,7 @@
             android:id="@+id/moreButton"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:background="@drawable/more_selector"
+            android:background="@drawable/more_shadow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
