Add wallpaper, recompress wallpapers

--- a/Launcher/App/src/main/res/layout/activity_main.xml
+++ b/Launcher/App/src/main/res/layout/activity_main.xml
@@ -115,7 +115,9 @@
         android:background="#000000"
         android:orientation="horizontal"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:paddingBottom="10dp"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <TextView
             android:id="@+id/selectionHint"
