--- a/Launcher/App/src/main/res/drawable/tab.xml
+++ b/Launcher/App/src/main/res/drawable/tab.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="200dp" />
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_hovered="true" android:drawable="@drawable/tab_hovered" />
+    <item android:state_pressed="true" android:drawable="@drawable/tab_pressed" />
+    <item android:drawable="@drawable/tab_default" />
+</selector>
