--- a/Launcher/App/src/main/res/drawable/ic_circ_more.xml
+++ b/Launcher/App/src/main/res/drawable/ic_circ_more.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-  
+    <item android:drawable="@drawable/bkg_button_circ"/>
+    <item android:drawable="@drawable/ic_more"/>
 </layer-list>
