--- a/Launcher/App/src/main/res/layout/activity_webview.xml
+++ b/Launcher/App/src/main/res/layout/activity_webview.xml
@@ -4,7 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_meta"
+    android:background="@drawable/bg_meta_dark"
     android:orientation="vertical">
 
     <LinearLayout
