--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -207,7 +207,18 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_meta"
+                    android:src="@drawable/bg_meta_dark"
+                    tools:ignore="ImageContrastCheck" />
+
+                <ImageView
+                    android:id="@+id/background9"
+                    android:layout_width="32dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="4dp"
+                    android:background="@drawable/bkg_button_wallpaper"
+                    android:padding="0dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bg_meta_light"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
