--- a/Launcher/App/src/main/res/layout/lv_app_icon.xml
+++ b/Launcher/App/src/main/res/layout/lv_app_icon.xml
@@ -18,9 +18,23 @@
             android:id="@+id/moreButton"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:background="@drawable/more_shadow"
+            android:layout_margin="3dp"
+            android:background="@drawable/ic_circ_more"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/killButton"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="3dp"
+            android:background="@drawable/ic_running"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/imageLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/imageLabel"
