--- a/Launcher/App/src/main/res/layout/activity_webview.xml
+++ b/Launcher/App/src/main/res/layout/activity_webview.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#70000000"
+        android:background="#3A000000"
         android:orientation="horizontal"
         android:paddingLeft="7dp"
         android:paddingRight="7dp">
@@ -24,6 +24,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_back"
             android:src="@drawable/web_back"
             android:visibility="gone"
             tools:visibility="visible" />
@@ -37,6 +38,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_forward"
             android:src="@drawable/web_forward"
             android:visibility="gone"
             tools:visibility="visible" />
@@ -48,6 +50,7 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_reload"
             android:src="@drawable/web_refresh" />
 
         <TextView
@@ -92,6 +95,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_light"
             android:src="@drawable/web_light"
             android:visibility="gone" />
 
@@ -104,6 +108,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_light"
             android:src="@drawable/web_dark"
             android:visibility="gone" />
 
@@ -116,6 +121,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_zoom_out"
             android:src="@drawable/web_zoom_out"
             android:visibility="gone" />
 
@@ -128,6 +134,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_zoom_in"
             android:src="@drawable/web_zoom_in"
             android:visibility="gone" />
 
@@ -138,6 +145,7 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="8dp"
             android:background="@drawable/bkg_button_web"
+            android:tooltipText="@string/web_exit"
             android:src="@drawable/web_close" />
 
     </LinearLayout>
