--- a/Launcher/App/src/main/res/layout/dialog_launch_out_info.xml
+++ b/Launcher/App/src/main/res/layout/dialog_launch_out_info.xml
@@ -19,10 +19,11 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="80sp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:autofillHints="text"
         android:backgroundTint="@android:color/white"
+        android:minHeight="90sp"
         android:text="@string/launch_message"
         android:textColor="@android:color/white" />
 
