--- a/Launcher/App/src/main/res/layout/lv_group.xml
+++ b/Launcher/App/src/main/res/layout/lv_group.xml
@@ -29,6 +29,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/ic_circ_more"
+        android:tooltipText="@string/group_settings"
         android:visibility="gone"
         tools:visibility="visible" />
 
