--- a/Launcher/App/src/main/res/drawable/bkg_button.xml
+++ b/Launcher/App/src/main/res/drawable/bkg_button.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-
-    <corners android:radius="25dp" />
-    <solid android:color="#1C1C1D" />
-
-    <padding android:bottom="6dp" android:left="14dp" android:right="6dp" android:top="6dp" />
-
-    <size android:height="39dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_hovered="true" android:drawable="@drawable/bkg_button_hover" />
+    <item android:drawable="@drawable/bkg_button_default" />
+</selector>
