--- a/Launcher/App/src/main/res/drawable/bkg_button_circle.xml
+++ b/Launcher/App/src/main/res/drawable/bkg_button_circle.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_hovered="true" android:drawable="@drawable/bkg_button_circle_hover" />
+    <item android:drawable="@drawable/bkg_button_circle_default" />
 </selector>
