--- a/Launcher/App/src/main/res/layout/activity_webview.xml
+++ b/Launcher/App/src/main/res/layout/activity_webview.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#3A000000"
+        android:background="#1A000000"
         android:orientation="horizontal"
         android:paddingLeft="7dp"
         android:paddingRight="7dp">
@@ -24,8 +24,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_back"
             android:src="@drawable/web_back"
+            android:tooltipText="@string/web_back"
             android:visibility="gone"
             tools:visibility="visible" />
 
@@ -38,8 +38,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_forward"
             android:src="@drawable/web_forward"
+            android:tooltipText="@string/web_forward"
             android:visibility="gone"
             tools:visibility="visible" />
 
@@ -50,8 +50,8 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_reload"
-            android:src="@drawable/web_refresh" />
+            android:src="@drawable/web_refresh"
+            android:tooltipText="@string/web_reload" />
 
         <TextView
             android:id="@+id/urlPre"
@@ -95,8 +95,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_light"
             android:src="@drawable/web_light"
+            android:tooltipText="@string/web_light"
             android:visibility="gone" />
 
         <ImageButton
@@ -108,8 +108,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_light"
             android:src="@drawable/web_dark"
+            android:tooltipText="@string/web_light"
             android:visibility="gone" />
 
         <ImageButton
@@ -121,8 +121,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_zoom_out"
             android:src="@drawable/web_zoom_out"
+            android:tooltipText="@string/web_zoom_out"
             android:visibility="gone" />
 
         <ImageButton
@@ -134,8 +134,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_zoom_in"
             android:src="@drawable/web_zoom_in"
+            android:tooltipText="@string/web_zoom_in"
             android:visibility="gone" />
 
         <ImageButton
@@ -145,8 +145,8 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="8dp"
             android:background="@drawable/bkg_button_web"
-            android:tooltipText="@string/web_exit"
-            android:src="@drawable/web_close" />
+            android:src="@drawable/web_close"
+            android:tooltipText="@string/web_exit" />
 
     </LinearLayout>
 
