--- a/Launcher/App/src/main/res/layout/activity_webview.xml
+++ b/Launcher/App/src/main/res/layout/activity_webview.xml
@@ -8,9 +8,10 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#1A000000"
+        android:background="#2A000000"
         android:orientation="horizontal"
         android:paddingLeft="7dp"
         android:paddingRight="7dp">
