--- a/Launcher/App/src/main/res/values/styles.xml
+++ b/Launcher/App/src/main/res/values/styles.xml
@@ -31,6 +31,7 @@
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="dialog" parent="Theme.AppCompat.Dialog.Alert">
